# home-control

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs
frontend/: package-lock.json  package.json
frontend/src/: app.css  hooks.ts
frontend/src/lib/: AlarmStatus.svelte  Connectivity.svelte  Header.svelte  LedControl.svelte  Sidebar.svelte  SidebarButton.svelte  SidebarLightButton.svelte  WeatherForecast.svelte  api.js
frontend/src/routes/: __layout.svelte  index.svelte
scripts/: deploy.sh
src/: api.rs  config.rs  error.rs  gpio_controller.rs  home_assistant.rs  lib.rs  log.rs  main.rs
