[package]
name = "home-control"
authors = ["Julien Kauffmann <julien.kauffmann@freelan.org>"]
description = "A home automation interface for embedded systems."
license = "MIT"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ereOn/home-control.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
clap = "2.34.0"
log = "0.4.14"
rust-embed = "6.3.0"
simplelog = "0.11"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
warp-embed = "0.4.0"
warp-reverse-proxy = { version = "0.4.0", default-features = false, features=["rustls-tls"] }