[package]
name = "home-control"
authors = ["Julien Kauffmann <julien.kauffmann@freelan.org>"]
description = "A home automation interface for embedded systems."
license = "MIT"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ereOn/home-control.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
gpio = ["rppal"]

[dependencies]
anyhow = "1.0.51"
clap = { version = "3.0.13", features = ["derive", "env"] }
chrono = { version = "0.4.19", features = ["serde"] }
config = { version = "0.13.1", features = ["yaml"] }
crossbeam-channel = "0.5"
log = "0.4.14"
futures-util = "0.3.0"
rppal = { version = "0.13.1", optional = true }
rust-embed = "6.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = {version = "1.13", features = []}
simplelog = "0.11"
thiserror = "1.0.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.16", features = [
    "connect",
    "rustls-tls-webpki-roots",
] }
url = "2.2"
warp = "0.3"
warp-embed = "0.4.0"
warp-reverse-proxy = { version = "0.4.0", default-features = false, features = [
    "rustls-tls",
] }
